--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "deploy" : "npm run build && gh-pages -d build",
+    "homepage": "https://imdeepakvermaa.github.io/my-portfolio/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
