--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://imdeepakvermaa.github.io/my-portfolio/",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -21,9 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy" : "npm run build",
-    "deploy" : "npm run build && gh-pages -d build",
-    "homepage": "https://imdeepakvermaa.github.io/my-portfolio/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
