--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://imdeepakvermaa.github.io/my-portfolio/",
-  "name": "my-portfolio",
+  "homepage": "https://imdeepakvermaa.github.io/imdeepakvermaa-portfolio/",
+  "name": "imdeepakvermaa-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
