--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://imdeepakvermaa.github.io/imdeepakvermaa-portfolio/",
+  "homepage": "https://imdeepakvermaa.github.io",
   "name": "imdeepakvermaa",
   "version": "0.1.0",
   "private": true,
